    (to setup into /etc/oar/oar_phoenix.pl)
  - New (experimental!) scheduler written in Ocaml
  - Cpusets are activated by default
  - Bugfix #11065: oar_resource_init fix (add a space)
  - Bug 10999: memory leak into Hulot when used with postgresql. The leak has been
    minimized, but it is still there (DBD::Pg bug)
  - Almighty cleans ipcs used by oar on exit 

version 2.4.3:
--------------
  - Hulot module now has customizable keepalive feature
  - Added a hook to launch a healing command when nodes are suspected
    (activate the SUSPECTED_HEALING_EXEC_FILE variable)
  - Bugfix #9995: oaraccouting script doesn't freeze anymore when db is unreachable.
  - Bugfix #9990: prevent from inserting jobs with invalid username (like an empty username)
  - Oarnodecheck improvements: node is not checked if a job is already running
  - New oaradmin option: --auto-offset
  - Feature request #10565: add the possibility to check the aliveness of the
    nodes of a job at the end of this one (pingchecker) 

version 2.4.2:
--------------
  - New "Hulot" module for intelligent and configurable energy saving
  - Bug #9906: fix bad optimization in the gantt lib (so bad scheduling
 
version 2.4.1:
--------------
  - Bug #9038: Security flaw in oarsub --notify option
  - Bug #9601: Cosystem jobs are no more killed when a resource is set to Absent
  - Fixed some packaging bugs
  - API bug fixes in job submission parsing
  - Added standby info into `oarnodes -s` and available_upto info into
    /resources uri of the API
  - Bug Grid'5000 #2687 Fix possible crashes of the scheduler.
  - Bug fix: with MySQL DB Finaud suspected resources which are not of the
    "default" type.
  - Signed debian packages (install oar-keyring package)

version 2.4.0:
--------------
  - Bug #8791: added CHECK_NODES_WITH_RUNNING_JOB=no to prevent from checking
    occupied nodes
  - Fix bug in oarnodesetting command generated by oar_resources_init (detect_resources)