@@ -415,6 +415,10 @@ ENERGY_SAVING_INTERNAL="no"
 # This value must be greater than ENERGY_SAVING_WINDOW_TIME.
 #ENERGY_SAVING_WINDOW_TIMEOUT="120"
 
+# The energy saving module can be automatically restarted after reaching
+# this number of cycles. This is a workaround for some DBD modules that do 
+# not always free memory correctly.
+#ENERGY_MAX_CYCLES_UNTIL_REFRESH=5000
 
 ################################################################################
 
